--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.1",
 
   "dependencies": {
-    "underscore": "~1.5"
+    "underscore": "~1.5",
+    "join": "2.3.1"
   },
 
   "devDependencies": {
