--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "karma": "~0.10",
     "karma-mocha": ">= 0.1",
-    "mocha": ">=1.13.0"
+    "mocha": ">=1.13.0",
+    "should": ">=2.0.1"
   }
 }
